# emptyos

./: .dockerignore  .eos-branding  .eos-personal  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  emptyos.example.toml  emptyos.toml.example  export-groups.toml  pyproject.toml  release.toml  restart.bat  restart.sh  service.bat  stop.bat  termux-setup.sh
.claude/: settings.json
.claude/rules/: addons.md  app-conventions-for-export.md  app-ui-patterns.md  boards-as-view-layer.md  daemon-handling.md  demo-mode.md  dev-gotchas.md  docs-sync.md  geo.md  hub-panels.md  multi-cli-participants.md  multi-module-apps.md  plugins.md  proposed-action.md  room-review-gate.md  sandbox-driven-testing.md  sandbox-usage.md  shared-frontend.md  slash-command-palette.md  store.md  test-fix-verify-loop.md  testing.md  tour-steps.md  vault-operator.md  voice-intents.md
.devcontainer/: devcontainer.json  setup.sh  start.sh
.github/workflows/: docker-publish.yml  dogfood.yml  release-safe.yml  tests.yml
apps/_example/: app.py  manifest.toml
apps/actions/: app.py  manifest.toml
apps/agent/: app.py  context.py  manifest.toml  orient.py  prompts.py  repl.py  routes.py  sessions.py  skills.py
apps/app-analytics/: app.py  manifest.toml  vault_mixin.py
apps/app-gen/: app.py  manifest.toml  plugin_gen.py
apps/assistant/: app.py  files.py  manifest.toml  prompts.py  research.py  sessions.py  vision.py
apps/billing/: app.py  manifest.toml
apps/boards/: __init__.py  app.py  automation.py  board_engine.py  export.py  link_index.py  manifest.toml  presets.py  views.py
apps/calendar/: app.py  manifest.toml
apps/canvas/: app.py  layout.py  manifest.toml  prompts.py  storage.py
apps/company/: app.py  libraries.py  manifest.toml
apps/dictionary/: app.py  manifest.toml  srs.py
apps/expense/: app.py  categories.py  manifest.toml
apps/explore/: _helpers.py  app.py  generation.py  manifest.toml  vault_io.py
apps/focus/: app.py  manifest.toml
apps/forge/: FORGE.md  app.py  manifest.toml
apps/geocode/: app.py  manifest.toml
apps/gesture/: app.py  manifest.toml
apps/git/: app.py  manifest.toml
apps/github-connector/: app.py  manifest.toml
apps/guideline/: app.py  manifest.toml
apps/hands-free/: app.py  manifest.toml
apps/hub/: app.py  manifest.toml
apps/journal/: app.py  manifest.toml  manifest.tomlschema = [    {key = journal.default_mood, label = Default Mood, type = select, options = [great, good, okay, low, bad], default = good},]  panels.py  parser.py  prompts.py
demo/: emptyos.toml
docker/: entrypoint.sh
docs/: AGENT-BENCH.md  AGENT.md  APP-DEVELOPMENT.md  APP-SPECS.md  APPS.md  AUTH.md  BACKLOG.md  CABLE-REPORT-LIMITS.md  DEPLOYMENT.md  DESIGN.md  DOGFOOD-AGENT.md  EMPTYOS-EM-ROADMAP.md  EXPORT-ANALYSIS.md  FRONTEND-DESIGN-LANGUAGE.md  GETTING-STARTED.md  MIGRATION.md  PRIVACY.md  RELEASING.md  ROOMS-V3.md  SYSTEM-INTERNALS.md
dogfood/: emptyos.toml.example
emptyos/: __init__.py  __main__.py  mcp_server.py
scripts/: _classify_dimensions.py  backfill-manifest-created.py  check-app-nav.py  check-branding.py  check-ios-safe-area.py  check-personal.py  check_base.py  conv-test-cases.toml  decompose_app.py  demo-setup.py  deploy-service.sh  dogfood-mobile-scan.py  dogfood-sweep.py  eos-agent.py  gen-design-md.py  generate_emptyos_site.py  generate_splash_screens.py  import_nexans_library.py  log_app_development.py  migrate-scroll-personas.py  migrate_boards_to_latest_presets.py  migrate_items_to_vault.py  migrate_music_frontmatter.py  package-release.py  redeploy-all.sh  redeploy-demo.sh  refresh-demo-dates.py  release-public.py  release-readiness.py  rename_kb_kinds.py  repair_journal_duplicates.py  sdk_duplicate_scan.py  seed_demo_windfarm.py  seed_reports_demo.py  seed_reports_figure.py  seed_work_os_demo.py  standardize_projects.py  suno_capture.py  suno_link_to_vault.py  test-codex-cli.py  (+7 more)
service/: com.emptyos.plist  emptyos.service  install.sh
services/blender-mcp/: README.md  pyproject.toml  server.py
services/chatbot/: .env.example  .gitignore  Dockerfile  GO-LIVE.md  README.md  caddy.snippet  config.py  corpus.py  docker-compose.yml  embed.py  ledger.py  main.py  pyproject.toml  service.toml  sites.toml.example
services/chatbot/providers/: __init__.py  base.py  openai_provider.py
tests/: conftest.py  factories.py  fake_kernel.py  helpers.py  page_helpers.py  reference_validator.py  smoke_calculator_framework.py  smoke_warp_moves.py  test_accessibility.py  test_agent_runtime_early_exit.py  test_auto_ui.py  test_blender_mcp.py  test_cables_fem_dispatch.py  test_cables_sheath_voltage.py  test_cables_topology.py  test_claude_cli_limit.py  test_components.py  test_dispatcher.py  test_dogfood.py  test_dogfood_behavior.py  test_dogfood_fiction.py  test_dogfood_items.py  test_dogfood_jobs.py  test_dogfood_media.py  test_dogfood_phone_day.py  test_dogfood_picker.py  test_dogfood_places.py  test_dogfood_projects.py  test_dogfood_publish.py  test_dogfood_recipes.py  test_dogfood_reports.py  test_edge_cases.py  test_jobs_vault_model_migration.py  test_journeys.py  test_keyboard.py  test_manifest_deps.py  test_nexans_importer.py  test_openai_compat_empty_stream.py  test_openai_compat_tool_history.py  test_override_resolution.py  (+127 more)
(+649 files in other folders)
