[project]
name = "emptyos-blender-mcp"
version = "0.1.0"
description = "MCP shim that lets MCP clients drive a running Blender through the EmptyOS bridge addon"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
emptyos-blender-mcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
